--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@chgibb/css-spinners@2.2.1/css/spinner/three-quarters.min.css">
     </head>
     <body>
-        <header>
+        <header style="width: 300px;">
             <form id="name-form" style="display: flex; margin: 0 auto; text-align: center; flex-direction: column; align-items: center;">
                 <h1>Ice Breaker</h1>
                 <input type="text" name="name" placeholder="Enter name" style="width: fit-content;">
